Run CI on every pull && PR.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,8 @@
 name: CI
 
 on:
-  push:
-    tags: '[0-9]+.[0-9]+[0-9]+'
-    branches:
-      - master
-      - workflows
-  pull_request:
-    branches: master
+  - push
+  - pull_request
 
 jobs:
   build:
