--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,43 +13,32 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: true
-      - name: Setup APT cache
-        uses: actions/cache@v2.1.2
+      - name: Setup Lua cache
+        id: cache-lua
+        uses: actions/cache@v2
         with:
-          path: /var/cache/apt/**
-          key: ${{ runner.os }}-apt
-      - name: Install Lua and LuaRocks
-        run: |
-          # apt-get commands
-          echo '::group::apt-get update'
-          sudo apt-get -q update
-          echo '::endGroup::'
-          echo '::group::apt-get install'
-          sudo apt-get -qy install lua5.1 luarocks liblua5.1-bitop0
-          echo '::endGroup::'
-      - name: Prepare Lua paths
-        run: |
-          luarocks path --lr-bin >> $GITHUB_PATH
-          luarocks path | sed -e 's/^export //' -e "s/'//g" >> $GITHUB_ENV
-      - name: Setup LuaRocks cache
-        id: cache-luarocks
-        uses: actions/cache@v2.1.2
+          path: |
+            ~/.lua
+            ~/.luarocks
+          key: ${{ runner.os }}-lua-${{ hashFiles('.github/luarocks') }}
+          restore-keys: ${{ runner.os }}-lua-
+      - name: Install Lua
+        if: steps.cache-lua.outputs.cache-hit != 'true'
+        uses: leafo/gh-actions-lua@v6
         with:
-          path: ~/.luarocks
-          key: ${{ runner.os }}-luarocks
+          luaVersion: "5.1.5"
+      - name: Install LuaRocks
+        if: steps.cache-lua.outputs.cache-hit != 'true'
+        uses: leafo/gh-actions-luarocks@v2
       - name: Install testing libraries
-        if: steps.cache-luarocks.outputs.cache-hit != 'true'
+        if: steps.cache-lua.outputs.cache-hit != 'true'
         run: |
           # luarocks install
-          echo '::group::luacheck'
-          luarocks install --local luacheck
-          echo '::endGroup::'
-          echo '::group::mockagne'
-          luarocks install --local mockagne 1.0
-          echo '::endGroup::'
-          echo '::group::luaunit'
-          luarocks install --local luaunit 2.1
-          echo '::endGroup::'
+          while read ROCK VERSION; do
+            echo "::group::$ROCK"
+            luarocks install --local $ROCK $VERSION
+            echo '::endGroup::'
+          done < .github/luarocks
       - name: Lint
         uses: nebularg/actions-luacheck@v1
         with:
