--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,7 @@ jobs:
       - name: Lint
         uses: nebularg/actions-luacheck@v1
         with:
+          args: "--exclude-files .lua*/**"
           annotate: error
       - name: Test
         run: lua tests/Items.lua
